--- a/docs/css/blocks/common/btn.scss
+++ b/docs/css/blocks/common/btn.scss
@@ -1,17 +1,21 @@
 .btn {
   @include ubuntu($style: medium);
 
-  padding: 8px 15px;
+  padding: rem(8px) rem(15px);
   background: $red;
   color: #fff;
   text-decoration: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: rem(5px);
   border-color: transparent;
   display: inline-block;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: rem(13px);
   cursor: pointer;
+
+  @include tablets() {
+    font-size: rem(16px);
+  }
 
   &_background_black {
     background: $black;
