--- a/docs/css/blocks/common/section-title.scss
+++ b/docs/css/blocks/common/section-title.scss
@@ -1,15 +1,79 @@
 .section-title {
   @include gagalin()
 
-  font-size: 72px;
+  font-size: rem(72px);
   color: $yellow;
   line-height: 1.1;
-  margin-bottom: 50px;
+  margin-bottom: rem(50px);
+
+  @include tablets() {
+    font-size: rem(76px);
+  }
+  @include phones() {
+    font-size: rem(68px);
+  }
 
   &_black {
     color: $black;
   }
+  &_white {
+    color: #ffffff;
+  }
+  &_best {
+    @include tablets() {
+      font-size: rem(82px);
+    }
+    @include phones() {
+      font-size: rem(62px);
+    }
+  }
   &_hero {
-    margin-bottom: 25px;
+    margin-bottom: rem(25px);
+
+    @include tablets() {
+      white-space: nowrap;
+      font-size: rem(82px);
+}
+    @include phones() {
+      font-size: rem(72px);
+      white-space: nowrap;
+      margin: 0;
+    }
+  }
+  &_team {
+    margin-bottom: rem(40px);
+
+    @include tablets() {
+      font-size: rem(82px);
+      margin-bottom: rem(45px);
+    }
+    @include phones() {
+      font-size: rem(58px);
+      margin-bottom: rem(30px);
+    }
+  }
+  &_menu {
+    position: absolute;
+    top: rem(95px);
+    left: rem(95px);
+
+    @include tablets {
+      top: rem(110px);
+      left: rem(30px);
+      margin-bottom: 0;
+      font-size: rem(82px);
+    }
+    @include phones {
+      font-size: rem(56px);
+      margin-bottom: 0;
+      top: rem(60px);
+      left: rem(10px);
+    }
+  }
+  &_order {
+    @include phones() {
+      font-size: rem(50px);
+      margin-bottom: rem(20px);
+    }
   }
 }
