--- a/docs/css/blocks/hero.scss
+++ b/docs/css/blocks/hero.scss
@@ -3,50 +3,105 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-}
 
-.hero__container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.hero__order-btn {
-  margin-left: 15px;
+  &__container {
+    justify-content: flex-start;
+  }
 }
 
 .hero__content {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex: 0.73;
-  margin-left: 15px;
+  margin-left: rem(15px);
+
+  @include tablets() {
+    margin-top: 0;
+    margin-left: 0;
+    flex-direction: column;
+    flex: initial;
+  }
+  @include phones() {
+    flex-direction: column;
+    flex: initial;
+    margin-top: 0;
+    margin-left: 0;
+
+  }
 }
 
 .hero__content-text {
   @include lifehack()
 
   color: #fff;
-  font-size: 64px;
-  line-height: 60px;
+  font-size: rem(64px);
+  line-height: rem(60px);
+
+  @include tablets() {
+    font-size: rem(72px);
+  }
+  @include phones() {
+    font-size: rem(58px);
+  }
 }
 
 .hero__content-description {
-  margin-left: 12px;
-  margin-top: 65px;
+  margin-left: rem(12px);
+  margin-top: rem(65px);
+  display: flex;
+  flex-flow: column nowrap;
+
+  @include tablets() {
+    margin-top: 0;
+    margin-left: 0;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+}
+
+.hero__content-image, .hero__content-description {
+  width: 50%;
+
+  @include tablets() {
+    width: 100%;
+  }
+  @include phones() {
+    width: 85%;
+  }
+}
+
+.hero__content-description {
+  @include tablets() {
+    width: 75%;
+  }
+}
+
+.hero__burger-img {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .arrow-down {
-  width: 35px;
-  height: 25px;
+  width: rem(30px);
+  height: rem(15px);
   position: absolute;
-  bottom: 35px;
-  left: 48%;
+  bottom: rem(38px);
+  left: 48.45%;
 }
 
 .arrow-down__link {
-  background: url('../images/icons/arrow-scroll.svg') center center no-repeat;
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.arrow-down__icon {
+  width: inherit;
+  height: inherit;
 }
