--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -28,6 +28,13 @@
   display: flex;
   align-items: center;
   margin-left: rem(15px);
+
+  @include tablets() {
+    margin-left: 0;
+  }
+  @include phones() {
+    margin-left: 0;
+  }
 }
 
 .nav__list {
