week 2 final commit

--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -129,7 +129,7 @@
 .team-accordeon__item_active .team-accordeon__title {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .team-accordeon__title {
