--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -130,6 +130,13 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+
+  @include tablets() {
+    justify-content: center;
+  }
+  @include phones() {
+    justify-content: center;
+  }
 }
 
 .team-accordeon__title {
