--- a/css/blocks/arrow.scss
+++ b/css/blocks/arrow.scss
@@ -7,6 +7,7 @@
     left: 48.45%;
   }
   &_left, &_right {
+    width: 2.875rem;
     display: flex;
     align-items: center;
     justify-content: center;
