--- a/css/blocks/popup.scss
+++ b/css/blocks/popup.scss
@@ -1,19 +1,25 @@
 .popup {
-
+  position: absolute;
+  top: 13.8%;
+  left: 3.7%;
   &__container {
     width: rem(90px);
     height: rem(90px);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     background-color: #f08c33;
+    border-radius: 10%;
   }
   &__picture-icon {
-    width: rem(45px);
-    height: rem(45px);
+    width: rem(48px);
+    height: rem(48px);
   }
   &__picture-name {
     color: #ffffff;
+    text-transform: uppercase;
+    font-size: rem(14px);
+    @include gagalin();
   }
 }
