--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -80,5 +80,10 @@
   &_product {
     line-height: rem(65px);
     margin-bottom: 0;
+
+    @include tablets() {
+      font-size: 5.2rem;
+      line-height: rem(70px);
+    }
   }
 }
