--- a/css/blocks/product.scss
+++ b/css/blocks/product.scss
@@ -15,6 +15,10 @@
       margin: 0px 25px;
       margin-top: 45px;
     }
+    @include phones() {
+      height: 100%;
+      margin: 0;
+    }
   }
 }
 
@@ -65,6 +69,9 @@
       text-align: center;
       margin-left: 0;
     }
+    @include phones() {
+      width: 100%;
+    }
   }
   &__burger {
     width: 100%;
@@ -78,6 +85,9 @@
 
       @include tablets() {
         width: 80%;
+      }
+      @include phones() {
+        width: 100%;
       }
     }
   }
@@ -144,6 +154,9 @@
     @include tablets() {
       font-size: 5rem;
     }
+    @include phones() {
+      font-size: 3.7rem;
+    }
   }
   &__price-currency {
     font-size: rem(29px);
@@ -153,6 +166,9 @@
     @include tablets() {
       font-size: 2rem;
     }
+    @include phones() {
+      font-size: 1.7rem;
+    }
   }
   &__description-text {
     font-size: rem(14px);
@@ -160,6 +176,10 @@
 
     @include tablets() {
       font-size: 1rem;
+      line-height: 1.8rem;
+    }
+    @include phones() {
+      font-size: rem(17px);
       line-height: 1.8rem;
     }
   }
