--- a/docs/css/blocks/hamburger-menu-link.scss
+++ b/docs/css/blocks/hamburger-menu-link.scss
@@ -12,7 +12,20 @@
 	@include phones() {
     display: flex;
   }
+
+	&_active {
+		@include tablets() {
+	    display: flex;
+			flex-flow: column;
+			align-items: center;
+			justify-content: center;
+	  }
+		@include phones() {
+
+	  }
+	}
 }
+
 
 .hamburger-menu-link__bars {
 	&, &:before, &:after {
