--- a/docs/css/blocks/team.scss
+++ b/docs/css/blocks/team.scss
@@ -43,7 +43,7 @@
     &:last-child {
       padding-bottom: 0;
     }
-  &__item_active {
+  &__item.active {
     padding-bottom: rem(34px);
 
     @include tablets(){
@@ -51,14 +51,19 @@
     }
   }
   &__content {
-    display: flex;
     height: 0;
     overflow: hidden;
-    padding-top: rem(15px);
+    transition: height .3s;
 
-    @include tablets() {
-      flex-direction: column;
-      align-items: center;
+    &_all {
+      height: fit-content;
+      display: flex;
+      padding-top: rem(15px);
+
+      @include tablets() {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
   &__avatar {
@@ -108,13 +113,13 @@
   }
 }
 
-.team-accordeon__item_active .team-accordeon__content {
+.team-accordeon__item.active .team-accordeon__content {
   height: 100%;
 }
-.team-accordeon__item_active .team-accordeon__title {
+.team-accordeon__item.active .team-accordeon__title {
   color: $yellow;
 }
-.team-accordeon__item_active .team-accordeon__title::before {
+.team-accordeon__item.active .team-accordeon__title::before {
   content: '';
   border: 5px solid transparent;
   width: 0;
