--- a/css/main.scss
+++ b/css/main.scss
@@ -36,4 +36,4 @@ $phones: 480px;
         "blocks/reviews.scss",
         "blocks/team.scss",
         "blocks/popup.scss",
-        "blocks/hamburger-menu-link.scss";
+        "blocks/hamburger-menu.scss";
