--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -110,6 +110,9 @@
         }
     }
   }
+  &__item.active &__description {
+    transition: width 0.3s;
+  }
   &__item.active .close-btn {
     display: none;
 
