--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -31,6 +31,7 @@
     margin-bottom: rem(25px);
 
     @include tablets() {
+      margin-bottom: 1rem;
       white-space: nowrap;
       font-size: rem(82px);
 }
