--- a/docs/css/blocks/hero.scss
+++ b/docs/css/blocks/hero.scss
@@ -16,12 +16,16 @@
   margin-left: rem(15px);
 
   @include tablets() {
+    height: 86%;
+    justify-content: center;
     margin-top: 0;
     margin-left: 0;
     flex-direction: column;
     flex: initial;
   }
   @include phones() {
+    height: 70%;
+    justify-content: center;
     flex-direction: column;
     flex: initial;
     margin-top: 0;
@@ -65,7 +69,7 @@
   width: 50%;
 
   @include tablets() {
-    width: 100%;
+    width: 65%;
   }
   @include phones() {
     width: 85%;
@@ -85,23 +89,4 @@
   transform: translateX(-50%);
   max-width: 100%;
   max-height: 100%;
-}
-
-.arrow-down {
-  width: rem(30px);
-  height: rem(15px);
-  position: absolute;
-  bottom: rem(38px);
-  left: 48.45%;
-}
-
-.arrow-down__link {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.arrow-down__icon {
-  width: inherit;
-  height: inherit;
 }
