--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -31,6 +31,9 @@ $phones: 480px;
         "blocks/map.scss",
         "blocks/menu.scss",
         "blocks/order.scss",
+        "blocks/product.scss",
+        "blocks/arrow.scss",
         "blocks/reviews.scss",
         "blocks/team.scss",
-        "blocks/hamburger-menu-link.scss";
+        "blocks/popup.scss",
+        "blocks/hamburger-menu.scss";
