--- a/docs/css/blocks/popup.scss
+++ b/docs/css/blocks/popup.scss
@@ -2,8 +2,8 @@
   position: absolute;
   display: flex;
   flex-direction: row;
-  width: 360px;
-  height: 335px;
+  width: rem(360px);
+  height: rem(335px);
   top: 13.8%;
   left: 3.7%;
   cursor: pointer;
@@ -78,8 +78,8 @@
     }
   }
   &__item-icon {
-    width: 48px;
-    height: 40px;
+    width: rem(48px);
+    height: rem(40px);
   }
 }
 
