--- a/docs/css/blocks/product.scss
+++ b/docs/css/blocks/product.scss
@@ -12,8 +12,8 @@
 
     @include tablets() {
       height: 90%;
-      margin: 0px 25px;
-      margin-top: 45px;
+      margin: 0 rem(25px);
+      margin-top: rem(45px);
     }
     @include phones() {
       height: 100%;
