--- a/docs/css/blocks/hero.scss
+++ b/docs/css/blocks/hero.scss
@@ -38,7 +38,7 @@
   @include lifehack()
 
   color: #fff;
-  font-size: rem(64px);
+  font-size: rem(60.5px);
   line-height: rem(60px);
 
   @include tablets() {
@@ -89,4 +89,10 @@
   transform: translateX(-50%);
   max-width: 100%;
   max-height: 100%;
+}
+
+.hero__order-btn {
+  @include headerFontSize() {
+    font-size: rem(12px);
+  }
 }
