--- a/css/blocks/product.scss
+++ b/css/blocks/product.scss
@@ -62,6 +62,7 @@
     justify-content: space-between;
   }
   &__left {
+    position: relative;
     justify-content: center;
 
     @include tablets() {
