--- a/docs/css/blocks/product.scss
+++ b/docs/css/blocks/product.scss
@@ -127,13 +127,13 @@
     @include tablets() {
       bottom: initial;
       left: initial;
-      top: 10.9%;
-      right: 12%;
+      top: 0;
+      right: 0;
     }
     @include phones() {
       bottom: initial;
       left: initial;
-      top: 6.5%;
+      top: 0;
       right: 0;
     }
   }
@@ -142,8 +142,8 @@
     height: 5rem;
 
     @include tablets() {
-      width: 4.75rem;
-      height: 4.3rem;
+      width: 3.75rem;
+      height: 3.3rem;
     }
     @include phones {
       width: 3.75rem;
@@ -215,6 +215,10 @@
     @include phones() {
       font-size: rem(17px);
       line-height: 1.8rem;
+    }
+    @include iphoneFiveScreen() {
+      font-size: 1rem;
+      line-height: 1.6rem;
     }
   }
 }
