--- a/docs/css/blocks/popup.scss
+++ b/docs/css/blocks/popup.scss
@@ -2,11 +2,10 @@
   position: absolute;
   display: flex;
   flex-direction: row;
-  width: rem(360px);
-  height: rem(335px);
+  width: 5.7rem;
+  height: 5.7rem;
   top: 1%;
   left: 1%;
-  overflow: hidden;
 
   @include tablets() {
     top: 0;
@@ -19,8 +18,8 @@
   }
 
   &__container {
-    width: rem(90px);
-    height: rem(90px);
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,7 +32,9 @@
       background-color: $red;
       transition: color .3s;
     }
-
+    &:hover .popup__content {
+      display: flex;
+    }
     @include tablets() {
       width: 4.625rem;
       height: 4.625rem;
@@ -44,8 +45,8 @@
     }
   }
   &__content {
-    width: 75%;
-    height: 100%;
+    width: rem(270px);
+    height: rem(335px);
     background-color: #ffffff;
     opacity: .9;
     border-radius: 2%;
@@ -54,7 +55,9 @@
     flex-direction: column;
     justify-content: space-around;
     cursor: pointer;
-
+    position: absolute;
+    top: 1%;
+    left: 21%;
   }
   &__picture-icon {
     width: rem(48px);
@@ -97,8 +100,4 @@
     width: rem(48px);
     height: rem(40px);
   }
-}
-
-.popup.opened .popup__content {
-  display: flex;
 }
