--- a/css/main.scss
+++ b/css/main.scss
@@ -35,5 +35,6 @@ $phones: 480px;
         "blocks/arrow.scss",
         "blocks/reviews.scss",
         "blocks/team.scss",
-        "blocks/popup.scss",
+        "blocks/modal.scss",
+        "blocks/consist.scss",
         "blocks/hamburger-menu.scss";
