--- a/css/blocks/consist.scss
+++ b/css/blocks/consist.scss
@@ -58,6 +58,13 @@
     position: absolute;
     top: 1%;
     left: 100%;
+
+    @include tablets() {
+      left: 80%;
+    }
+    @include phones() {
+      left: 22%;
+    }
   }
   &__picture-icon {
     width: rem(48px);
