--- a/docs/css/blocks/modal.scss
+++ b/docs/css/blocks/modal.scss
@@ -10,7 +10,7 @@
   &__inner {
     max-width: 28.125rem;
     padding: 1.5625rem 1.25rem;
-    padding-right: rem(40px);
+    padding-right: rem(20px);
     border-radius: rem(5px);
     position: fixed;
     top: 50%;
@@ -22,6 +22,7 @@
   &__title {
     @include gagalin;
     font-size: rem(14px);
+    margin-bottom: rem(20px);
 
     @include tablets() {
       font-size: rem(16px);
@@ -44,8 +45,8 @@
   }
   &__close {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 3%;
+    top: 7%;
     width: rem(32px);
     height: rem(32px);
     opacity: 0.8;
