--- a/css/blocks/modal.scss
+++ b/css/blocks/modal.scss
@@ -87,6 +87,23 @@
   display: flex;
 }
 
-.order__btn {
+.order__button {
   align-self: center;
+  @include ubuntu($style: medium);
+
+  padding: rem(8px) rem(15px);
+  background: $red;
+  color: #fff;
+  text-decoration: none;
+  outline: none;
+  border-radius: rem(5px);
+  border-color: transparent;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: rem(13px);
+  cursor: pointer;
+
+  @include tablets() {
+    font-size: rem(16px);
+  }
 }
